# skillport

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  debug_fts_scores.py  pyproject.toml  release-please-config.json  verify_server.py
.agent/skills/algorithmic-art/: SKILL.md
.agent/skills/brand-guidelines/: SKILL.md
.agent/skills/canvas-design/: SKILL.md
.agent/skills/frontend-design/: SKILL.md
.agent/skills/hello-world/: SKILL.md  hello.py
.agent/skills/internal-comms/: SKILL.md
.agent/skills/mcp-builder/: SKILL.md
.agent/skills/skill-creator/: SKILL.md
.agent/skills/slack-gif-creator/: SKILL.md
.agent/skills/template-skill/: SKILL.md
.agent/skills/theme-factory/: SKILL.md
.agent/skills/webapp-testing/: SKILL.md
.github/workflows/: publish-mcp-docker.yml  release.yml
guide/: cli.md  configuration.md  creating-skills.md  philosophy.md
src/skillhub_mcp/: cli.py  config.py  db.py  server.py  setup.py  utils.py  validation.py
src/skillpod/: __init__.py  __main__.py
src/skillpod_mcp/: cli.py  config.py  server.py  validation.py
src/skillport/: __init__.py
src/skillsouko/: __main__.py
tests/integration/: test_cli_commands.py  test_search_and_tools_integration.py
tests/pbt/: test_name_properties.py
tests/unit/: test_add_logic.py  test_add_namespace.py  test_auto_index.py  test_config.py  test_core_skills_mode.py  test_github_source.py  test_index_state.py  test_init_command.py  test_normalization_and_threshold.py  test_origin.py  test_settings_fail_fast.py  test_sync.py  test_validation_rules.py  test_xml_instructions.py
(+126 files in other folders)
