[project]
name = "skillhub-mcp"
version = "0.0.0"
description = "MCP server for reusable Agent Skills"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.0.1",
    "lancedb>=0.1.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "tantivy>=0.20.0", # Often needed for lancedb FTS
    "google-genai>=1.52.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
skillhub-mcp = "skillhub_mcp.server:main"
